hphp/hack/test/typecheck/inout/bad_inout_use_assign3.php.exp
File "bad_inout_use_assign3.php", line 7, characters 18-23:
Invalid assignment to an inout parameter (Typing[4337])
File "bad_inout_use_assign3.php", line 7, characters 18-23:
Expected string (inout parameter)
File "bad_inout_use_assign3.php", line 9, characters 10-16:
But got float
